--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,25 @@
 *{
     box-sizing: content-box;
-    background-color: black;
     margin: 0;
     padding: 0;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-/*Header*/
-header{
-    width: 100%;
-}
-
-header img{
-    height: 50px;
-    width: 50px;
-    margin: 10px 20px;
+body{
+    height: 1vh;
+    background-color: black;
+    position: relative;
 }
 
 /*main*/
 main{
-    display: flex;
-    flex-direction: column;
+    display: block;
+    height: 100vh;
 }
 
 main .hero{
     position: relative;
+    height: 100vh;
 }
 
 main .hero .back-image{
@@ -33,6 +28,7 @@ main .hero .back-image{
 
 main .hero .back-image img{
     width: 100%;
+    height: 100vh;
 }
 
 main .hero .back-image .more{
@@ -44,9 +40,8 @@ main .hero .about-me {
     display: flex;
     align-items:flex-start;
     justify-content: space-around;
-    top: 0;
+    top: 10%;
     width: 100%;
-    height: 100%;
     background-color: rgba(0,0,0,0);
 }
 
@@ -93,9 +88,8 @@ main .hero .about-me .information a{
 main .information1{
     background-color: rgba(0, 0, 0, 0);
     width: 100%;
-    height: 100%;
     position: absolute;
-    top: 0px;
+    bottom: 10%;
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -107,14 +101,23 @@ main .information1 p{
     margin: 20px;
     padding: 10px;
     border-radius: 10px;
+    text-align: justify;
 }
 
 /*Footer*/
 
 footer{
+    position: absolute;
     width: 100%;
+    height: 10vh;
     display: flex;
     justify-content: center;
+    top: 90vh;
+}
+
+footer ul li{
+    text-decoration: none;
+    list-style-type: none;
 }
 
 footer img{
